start work on scripts.js file and polish the index.html page

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
       <div class="row">
         <div class="col-md-4" id="left4">
           <h3>About Ping Pong</h3>
-          <h4>Created by</h4>
-          <p>David Shin</p>
-          <h4>Github username/URL:</h4>
+          <h4 class="left">Created by</h4>
+          <p class ="leftp">David Shin</p>
+          <h4 class="left">Github username/URL:</h4>
           <p><a href="https://github.com/crispyb0i">crispyb0i</a></p>
-          <h4>Level 2 Test for:</h4>
-          <p>Java</p>
+          <h4 class="left">Level 2 Test for:</h4>
+          <p class="leftp">Java</p>
         </div>
         <div class="col-md-8" id="right8">
-          <h2>Rules:</h2>
+          <h2>Let's play!</h2>
+          <h4>Rules:</h4>
           <p>Ping Pong will count up to your number from 1 with the following exceptions:
           <ol>
             <li>Numbers divisible by 3 become "ping"</li>
@@ -32,8 +33,9 @@
             <div class="form-group">
               <label for="number">Enter your number here!</label>
               <input id="number" type="text">
+              <button type="submit" class="btn">Ping Pong!</button>
             </div>
-            <button type="submit" class="btn btn-primary">Ping Pong!</button>
+
           </form>
         </div>
       </div>
