add working functionality to styles.js file

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
               <input id="number" type="text">
               <button type="submit" class="btn">Ping Pong!</button>
             </div>
-
           </form>
+          <div id="results">
+            <!-- <ul id="resultList">
+            </ul> -->
+          </div>
         </div>
       </div>
     </div>
