--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Ping-Pong</h1>
       <div class="row">
         <div class="col-md-4" id="left4">
-          <h3>About Ping Pong</h3>
+          <h3>About Ping-Pong</h3>
           <h4 class="left">Created by</h4>
           <p class ="leftp">David Shin</p>
           <h4 class="left">Github username/URL:</h4>
@@ -27,16 +27,29 @@
           <ol>
             <li>Numbers divisible by 3 become "ping"</li>
             <li>Numbers divisible by 5 become "pong"</li>
-            <li>Numbers divisible by 3 and 5 become "pingpong"</li>
+            <li>Numbers divisible by 3 and 5 become "ping-pong"</li>
           </ol>
-          <form id="form">
+          <form id="form1">
             <div class="form-group">
               <label for="number">Enter your number here!</label>
               <input id="number" type="text">
-              <button type="submit" class="btn">Ping Pong!</button>
+            </div>
+            <button type="submit" id="btn1" class="btn">Ping Pong!</button>
+          </form>
+          <form id="form2">
+            <div class="form-group">
+              <button type="submit" id="btn2" class="btn">Reverse Ping Pong!</button>
             </div>
           </form>
-          <div id="results">
+        <div class="row">
+          <div class="col-md-4">
+            <div id="results">
+            </div>
+          </div>
+            <div class="col-md-4">
+                <img id="frontPic" src="img/front.jpg">
+                <img id="backPic" src="img/back.jpg">
+            </div>
           </div>
         </div>
       </div>
